--- a/src/configure.in
+++ b/src/configure.in
@@ -1,4 +1,4 @@
-dnl
+dnl				dnl 
 dnl  This is an autoconf script.
 dnl  To rebuild the `configure' script from this, execute the command
 dnl 	autoconf
@@ -8,7 +8,7 @@ dnl  AUTOCONF configuration for ECL
 dnl  Giuseppe Attardi 25.1.1994
 dnl
 
-AC_INIT([ecl],[0.9i],[])
+AC_INIT([ecl],[0.9j],[])
 AC_REVISION([$Revision$])
 AC_CONFIG_SRCDIR([bare.lsp.in])
 AC_CONFIG_AUX_DIR([${srcdir}/gmp])
