--- a/msvc/gc/Makefile
+++ b/msvc/gc/Makefile
@@ -11,10 +11,10 @@ srcdir = ..\..\src\gc
 
 !if "$(ECL_THREADS)" != ""
 THREADS_OBJ= win32_threads.obj
-THREADS_FLAGS= -DGC_WIN32_THREADS
+THREADS_FLAGS= -DGC_DLL -DGC_BUILD -DGC_WIN32_THREADS
 !else
 THREADS_OBJ=
-THREADS_FLAGS=
+THREADS_FLAGS= -DGC_DLL -DGC_BUILD
 !endif
 
 MFLAGS = /MD
