--- a/src/configure.in
+++ b/src/configure.in
@@ -565,7 +565,7 @@ case "${enable_boehm}" in
     test -d gc && rm -rf gc
     if mkdir gc; then
      (destdir=`${PWDCMD}`; cd gc; \
-      CC="${CC} ${PICFLAG}" CFLAGS="${CFLAGS}" LDFLAGS="${LDFLAGS}" \
+      CC="${CC} ${PICFLAG}" CFLAGS="-DGC_BUILD ${CFLAGS}" LDFLAGS="${LDFLAGS}" \
         $srcdir/gc/configure --disable-shared --prefix=${destdir} \
 	--includedir=${destdir}/ecl/gc/ --libdir=${destdir} --build=${build_alias} \
 	--host=${host_alias} ${boehm_configure_flags})
