--- a/src/configure.in
+++ b/src/configure.in
@@ -448,7 +448,7 @@ AC_CHECK_FUNCS( [nanosleep alarm times isnanf select setenv putenv] \
 		[gettimeofday getrusage] )
 
 AC_CHECK_FUNCS( [expf logf sqrtf cosf sinf tanf sinhf coshf tanhf] \
-		[floorf ceilf fabsf frexpf ldexpf])
+		[floorf ceilf fabsf frexpf ldexpf log1p log1pf log1pl])
 
 AC_CHECK_FUNCS( [sched_yield] )
 
