--- a/src/h/config.h.in
+++ b/src/h/config.h.in
@@ -271,6 +271,9 @@ typedef unsigned @CL_FIXNUM_TYPE@ cl_hashkey;
 #undef HAVE_FABSF
 #undef HAVE_FREXPF
 #undef HAVE_LDEXPF
+#undef HAVE_LOG1P
+#undef HAVE_LOG1PF
+#undef HAVE_LOG1PL
 /* whether we have sched_yield() that gives priority to other threads	*/
 #undef HAVE_SCHED_YIELD
 
