--- a/src/h/config.h.in
+++ b/src/h/config.h.in
@@ -276,6 +276,8 @@ typedef unsigned @CL_FIXNUM_TYPE@ cl_hashkey;
 #undef HAVE_LOG1PL
 /* whether we have sched_yield() that gives priority to other threads	*/
 #undef HAVE_SCHED_YIELD
+/* uname() for system identification					*/
+#undef HAVE_UNAME
 
 /*
  * we do not manage to get proper signal handling of floating point
