In cl_va_start(), factor the code for the worst case (narg > 64) in a separate function, so that the default case does not reference cl_env

--- a/src/h/config.h.in
+++ b/src/h/config.h.in
@@ -208,8 +208,8 @@ typedef unsigned @CL_FIXNUM_TYPE@ cl_hashkey;
 
 /* Stack grows downwards						*/
 #undef DOWN_STACK
-/* Arguments cannot be accessed as array				*/
-#undef NO_ARGS_ARRAY
+/* Argument list can be access as an array				*/
+#define ECL_USE_VARARG_AS_POINTER
 /* Most significant byte first						*/
 #undef WORDS_BIGENDIAN
 /* Has <sys/resource.h>							*/
