Simplifed MAKE-ARRAY. Deactivated the old garbage collector. New optimizers for MAKE-ARRAY and VECTOR-PUSH*. Declarations are now held in *cmp-env* instead of in global variables.

--- a/src/cmp/load.lsp.in
+++ b/src/cmp/load.lsp.in
@@ -35,6 +35,7 @@
   "src:cmp;cmpopt.lsp"
   "src:cmp;cmpclos.lsp"
   "src:cmp;cmpstructures.lsp"
+  "src:cmp;cmparray.lsp"
   "src:cmp;cmpmain.lsp"))
 
 (let ((si::*keep-documentation* nil))
