--- a/src/configure.in
+++ b/src/configure.in
@@ -315,6 +315,9 @@ fi
 dnl ----------------------------------------------------------------------
 dnl		Boehm-Weiser garbage collector
 if test ${enable_boehm} = "no" ; then
+  AC_MSG_ERROR([Boehm GC library is currently needed to build ECL]);
+fi
+if test ${enable_boehm} = "no" ; then
   EXTRA_OBJS="${EXTRA_OBJS} alloc.${OBJEXT} gbc.${OBJEXT}"
   enable_smallcons="no"
 else
