Make the incremenal garbage collector optional until we solve why some platforms break with it.

--- a/src/h/config.h.in
+++ b/src/h/config.h.in
@@ -202,6 +202,9 @@ typedef unsigned @CL_FIXNUM_TYPE@ cl_hashkey;
 /* Assembler implementation of APPLY and friends			*/
 #undef ECL_ASM_APPLY
 
+/* Activate Boehm-Weiser incremental garbage collector			*/
+#undef GBC_BOEHM_GENGC
+
 /*
  * SYSTEM FEATURES:
  */
