--- a/src/configure.in
+++ b/src/configure.in
@@ -200,6 +200,12 @@ AC_ARG_ENABLE(smallcons,
                   [(default=NO)]),
   [enable_smallcons=${enableval}],[enable_smallcons=no])
 
+AC_ARG_ENABLE(gengc,
+  AS_HELP_STRING( [--enable-gengc],
+		  [use generational garbage collection. Requires Boehm-Weiser gc.]
+		  [(no|yes, default=NO)]),
+  [], [enable_gengc=no] )
+
 dnl -----------------------------------------------------------------------
 dnl Installation directories
 ecldir="${libdir}/ecl"
@@ -288,7 +294,6 @@ if test "${enable_threads}" = "auto"; then
     enable_threads="yes"
   fi
 fi
-
 if test "${enable_threads}" = "yes" ; then
   if test -z "${THREAD_OBJ}"; then
     AC_MSG_ERROR([Threads aren't supported on this system.])
@@ -336,6 +341,9 @@ else
     AC_DEFINE(GBC_BOEHM, [0], [Use Boehm's garbage collector])
   fi
   EXTRA_OBJS="${EXTRA_OBJS} alloc_2.${OBJEXT}"
+fi
+if test "${enable_gengc}" = "yes" ; then
+  AC_DEFINE(GBC_BOEHM_GENGC)
 fi
 
 if test ${enable_smallcons} = "yes" ; then
