ECL_LONG_DOUBLE was not defined

--- a/src/h/config.h.in
+++ b/src/h/config.h.in
@@ -149,6 +149,9 @@ typedef unsigned @CL_FIXNUM_TYPE@ cl_hashkey;
 
 /* compiler understands long double                                     */
 #undef HAVE_LONG_DOUBLE
+#ifdef HAVE_LONG_DOUBLE
+# define ECL_LONG_FLOAT
+#endif
 /* compiler understands complex                                         */
 #undef HAVE_DOUBLE_COMPLEX
 #undef HAVE_FLOAT_COMPLEX
