Added hooks for registering DEF* forms and their locations with some database.

--- a/src/c/Makefile.in
+++ b/src/c/Makefile.in
@@ -72,7 +72,7 @@ ffi_x86_64.c: arch/ffi_x86_64.d $(DPP) $(HFILES)
 	$(RANLIB) $@
 
 clean:
-	$(RM) dpp *.c *.h $(OBJS) ../libecl.a cinit.o core a.out
+	$(RM) $(DPP) *.c *.h $(OBJS) all_symbols.o all_symbols2.o ../libecl.a cinit.o core a.out
 
 # Build rules
 
